# Agency

./: .gitignore  README.md  main.py  pyproject.toml
desktop/lotus/: README.md  install_lotus_desktop_entry.sh  launch_lotus.sh
desktop/pharos_governance_suite/lotus_dr_sort/: dr_sort_academic_helper.py
desktop/scripto/: README.md  install_dr_sort_desktop_entry.sh  launch_dr_sort.sh
lotus/: .gitignore  README.md  __init__.py  create_lotus_desktop_shortcuts.ps1  lotus_app.py  lotus_core.py  main.py  web.py
lotus/LOTUS_UPLOADS/: README.lotus
lotus/core/: __init__.py  engine.py  storage.py
scripto/: .gitignore  MASTER BIBLIOGRAPHY.txt  README.md  SCRIPTO_PREMIUM_SPEC.md  __init__.py  create_dr_sort_desktop_shortcut.ps1  document_sorter.py  dr_sort_academic_helper.py  scripto_rules.example.txt
scriptorium_v3/: .gitignore  AGENCY_LOTUS_PREMIUM_SPEC.md  Agency LOTUS.bat  Dr. Sort-Academic Helper.bat  LOTUS.bat  README.md  SCRIPTORIUM_PREMIUM_SPEC.md  Scriptorium.v3.bat  agency_lotus_app.py  agency_lotus_core.py  agency_lotus_rules.example.txt  create_agency_lotus_desktop_shortcuts.ps1  create_lotus_desktop_shortcuts.ps1  document_sorter.py  dr_sort_academic_helper.py  lotus_app.py  lotus_core.py  pdf_rename_sort.py  run_document_sorter.ps1  scriptorium_rules.example.txt  scriptorium_v3.py
scriptorium_v3/LOTUS_UPLOADS/: README.lotus
src/flowerapp/: __init__.py  main.py  web.py
src/lotus/: __init__.py  main.py  web.py
src/voice11/: README.md  __init__.py  cli.py  tts_engine.py
tests/: test_discipline.py  test_storage.py  test_tts_cli.py
(+5 files in other folders)
