[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flowerapp"
version = "1.0.0"
description = "Lotus scoring assistant (legacy package name: flowerapp)"
dependencies = [
    "fastapi",
    "uvicorn",
    "jsonschema",
    "jinja2",
    "pydantic"
]

[project.scripts]
lotus = "lotus.main:main"
flowerapp = "lotus.main:main"
voice11 = "voice11.cli:main"

[project.optional-dependencies]
speech = [
    "pyttsx3",
    "pydub"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
flowerapp = ["schemas/*.json"]
